# sumatra-flood-risk-analysis

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
app/: dashboard.py
app/pages/: 1_Flood_Analysis.py  2_Land_Impact.py  3_Regional.py  4_Data_Explorer.py  5_Choropleth_Map.py  6_Model_XAI.py  7_Prediction.py
configs/: settings.yaml
data/processed/: analysis_dataset.csv  analysis_dataset.parquet  complete_analysis_dataset.csv  complete_analysis_dataset.parquet  correlation_matrix.csv  dataset_summary.txt  flood_events_aggregated.csv
models/: flood_risk_xgboost_20251204_113016_metadata.json  flood_risk_xgboost_20251204_141511.pkl  flood_risk_xgboost_20251204_141511_metadata.json  flood_risk_xgboost_20251204_141511_scaler.pkl
notebooks/: 01_eda_data.ipynb  02_modeling_risk.ipynb  03_xai_shap_analysis.ipynb
scripts/: 01_prepare_data.py  02_download_gfc.py  03_download_chirps.py  04_merge_all_data.py  05_retrain_model.py  06_train_better_model.py
src/: __init__.py
src/data/: __init__.py  build_dataset.py  download_data.py  preprocess_geo.py
src/models/: __init__.py  evaluate_model.py  train_model.py
src/viz/: __init__.py  plot_maps.py
