[project]
name = "ifra"
version = "1.0.0"
description = "Indonesia Flood Risk Analytics - Dashboard untuk analisis risiko banjir"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Rafli Ardiansyah" }
]
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",
    "geopandas>=0.14.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "plotly>=5.18.0",
    "folium>=0.15.0",
    "streamlit>=1.29.0",
    "streamlit-folium>=0.17.0",
    "pyyaml>=6.0.0",
    "statsmodels>=0.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "E402", "B006", "B007", "F401", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
